Développement de la partie 1.1 FileZilla

--- a/index.html
+++ b/index.html
@@ -63,11 +63,27 @@
               <h3>1.1 FileZilla</h3>
             </header>
             <section>
+              <div class="imageRight">
+                <img src="ressources/FileZilla_add_site.png" alt="Capture d'écran de la fenêtre Gestionnaire de sites">
+                <div class=""><p>Fenêtre de création d'un "site"</p></div>
+              </div>
               <p>La solution la plus simple pour échanger des fichiers avec l'IUT est d'utiliser un utilitaire FTP, par exemple :
                 <cite title="FileZilla Client (FileZilla) est un client FTP, FTPS et SFTP, développé sous la licence publique générale GNU. Il est intégré à la liste des logiciels libres préconisés par l’État français dans le cadre de la modernisation globale de ses systèmes d’informations (S.I.). ">
                   <a href="https://filezilla-project.org/">Filezilla</a><!--
              --></cite>.
               </p>
+              <p>Vous pouvez ajouter transit dans vos "Sites" en allant dans Fichier > Gestionnaire de sites > Nouveau Site puis en renseignant l'hôte (l'adresse de transit : transit.iut2.univ-grenoble-alpes.fr) et votre login</p>
+              <p>Les informations nécessaires sont :</p>
+              <dl>
+                <dt>Protocole :</dt>
+                <dd>SFTP</dd>
+                <dt>Hôte :</dt>
+                <dd>transit.iut2.univ-grenoble-alpes.fr</dd>
+                <dt>Type d'authentification :</dt>
+                <dd>Au choix</dd>
+                <dt>Identifiant :</dt>
+                <dd>Votre nom de login à l'IUT</dd>
+              </dl>
             </section>
           </section>
         </section>
