Ajouts dans 1.1 et création 1.2 File manager

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                   </a>
                 </li>
               </ul>
+              <ul>
+                <li>
+                  <a href="#FileManager">
+                    <span class="navnum">1.2</span>
+                    <span class="navtext">Gestionnaire de fichiers</span>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li>
@@ -62,32 +70,39 @@
             <header>
               <h3>1.1 FileZilla</h3>
             </header>
-            <section>
-              <div class="imageRight">
-                <img src="ressources/FileZilla_add_site.png" alt="Capture d'écran de la fenêtre Gestionnaire de sites">
-                <div class=""><p>Fenêtre de création d'un "site"</p></div>
-              </div>
-              <p>La solution la plus simple pour échanger des fichiers avec l'IUT est d'utiliser un utilitaire FTP, par exemple :
-                <cite title="FileZilla Client (FileZilla) est un client FTP, FTPS et SFTP, développé sous la licence publique générale GNU. Il est intégré à la liste des logiciels libres préconisés par l’État français dans le cadre de la modernisation globale de ses systèmes d’informations (S.I.). ">
-                  <a href="https://filezilla-project.org/">Filezilla</a><!--
-             --></cite>.
-              </p>
-              <p>Vous pouvez ajouter transit dans vos "Sites" en allant dans Fichier > Gestionnaire de sites > Nouveau Site puis en renseignant l'hôte (l'adresse de transit : transit.iut2.univ-grenoble-alpes.fr) et votre login</p>
-              <p>Les informations nécessaires sont :</p>
-              <dl>
-                <dt>Protocole :</dt>
-                <dd>SFTP</dd>
-                <dt>Hôte :</dt>
-                <dd>transit.iut2.univ-grenoble-alpes.fr</dd>
-                <dt>Type d'authentification :</dt>
-                <dd>Au choix</dd>
-                <dt>Identifiant :</dt>
-                <dd>Votre nom de login à l'IUT</dd>
-              </dl>
-            </section>
+            <div class="imageRight">
+              <img src="ressources/FileZilla_add_site.png" alt="Capture d'écran de la fenêtre Gestionnaire de sites">
+              <div class=""><p>Fenêtre de création d'un "site"</p></div>
+            </div>
+            <p>La solution la plus simple pour échanger des fichiers avec l'IUT est d'utiliser un utilitaire FTP, par exemple :
+              <cite title="FileZilla Client (FileZilla) est un client FTP, FTPS et SFTP, développé sous la licence publique générale GNU. Il est intégré à la liste des logiciels libres préconisés par l’État français dans le cadre de la modernisation globale de ses systèmes d’informations (S.I.). ">
+                <a href="https://filezilla-project.org/" target="_blank">Filezilla</a><!--
+           --></cite>, disponible sur toutes les plateformes.
+            </p>
+            <p>Vous pouvez ajouter transit dans vos "Sites" en allant dans <code><em>Fichier > Gestionnaire de sites > Nouveau Site</em></code></p>
+            <p class="inline">Les informations nécessaires sont :</p>
+            <dl>
+              <dt>Protocole :</dt>
+              <dd>SFTP</dd>
+              <dt>Hôte :</dt>
+              <dd>transit.iut2.univ-grenoble-alpes.fr</dd>
+              <dt>Type d'authentification :</dt>
+              <dd>Au choix</dd>
+              <dt>Identifiant :</dt>
+              <dd>Votre nom de login à l'IUT</dd>
+            </dl>
+
+            <p>Une fois ajouté vous pouvez vous connecter en sélectionnant votre nouveau site en haut à gauche : <img src="ressources/FileZilla_added_site.png"></p>
+          </section>
+
+          <section>
+            <header>
+              <h3>1.2 Gestionnaire de fichiers</h3>
+            </header>
           </section>
         </section>
 
+        <hr>
 <!--_______________________________LINUX_______________________________________-->
         <section id="Linux">
           <header>
@@ -107,6 +122,8 @@
           </section>
 
         </section>
+
+        <hr>
 
 <!--_______________________________WINDOWS_____________________________________-->
         <section id="Windows">
